[wip] migrate site from jekyll to nanoc
still miss:
* pagination
* deploy via FTP
* travis CI
* checks

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-before_script:
-    - gem install jekyll
-    - gem install rdiscount
+# TODO nanoc build + deploy FTP
+# before_script:
+#     - gem install jekyll
+#     - gem install rdiscount
 
-script:
-    - jekyll --safe
+# script:
+#     - jekyll --safe
     
-notifications:
-    - email: false
+# notifications:
+#     - email: false
