[wip] nanoc migration progress (@see #4)
RSS
sitemap
notes content fixes
resume fixes
prev/next links
remove author page
layout includes fixes

--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -22,6 +22,7 @@ data_sources:
     items_root: /assets/
 
 site:
+  lang: "en"
   name: "Olivier Patry"
   description: "Personal website of Olivier Patry."
-  paginate: 8
+  url: "http://opatry.net"
