--- a/Rules
+++ b/Rules
@@ -4,22 +4,34 @@ compile '/assets/*' do
   # don’t filter or layout
 end
 
+compile '/notes/*' do
+  filter :fenced_code_block
+  filter :erb
+  filter :kramdown
+  filter :colorize_syntax, :default_colorizer => :pygmentize  # syntax highlighting
+  layout 'default'
+  # FIXME do it unless debug
+  filter :html_compressor, :type => item[:extension]
+end
+
+compile '/rss/|/sitemap/' do
+  filter :erb
+  filter :html_compressor, :type => item[:extension]
+end
+
 compile '*' do
   if item.binary?
     # don’t filter binary items
   else
-    filter :fenced_code_block
     filter :erb
     filter :kramdown
-    filter :colorize_syntax, :default_colorizer => :pygmentize  # syntax highlighting
     unless item[:layout] == 'none'
       layout item[:layout] || 'default'
     end
-    #filter :html_compressor, :type => item[:extension]
   end
 end
 
-route '/posts/*' do
+route '/notes/*' do
   y,m,d,slug = /([0-9]+)\-([0-9]+)\-([0-9]+)\-([^\/]+)/.match(item.identifier).captures
 
   "/#{y}/#{m}/#{d}/#{slug}/index.html"
@@ -30,12 +42,8 @@ route '/assets/*' do
   item.identifier[7..-2]
 end
 
-route '/rss/' do
-  '/rss.xml'
-end
-
-route '/sitemap/' do
-  '/sitemap.xml'
+route '/rss/|/sitemap/' do
+  item.identifier.chop + '.' + item[:extension]
 end
 
 route '*' do
