invite readers to fix any error through the GitHub URL associated to the current item

--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -26,3 +26,4 @@ site:
   name: "Olivier Patry"
   description: "Personal website of Olivier Patry."
   url: "http://opatry.net"
+  repo: "https://github.com/opatry/opatry.github.io"
