--- a/Rules
+++ b/Rules
@@ -59,6 +59,10 @@ route '/rss/|/sitemap/' do
   item.identifier.chop + '.' + item[:extension]
 end
 
+route '/error/*' do
+  '/' + item.identifier[7..-2] + '.html'
+end
+
 route '*' do
   if item.binary?
     # Write item with identifier /foo/ to /foo.ext
