Specified UTF-8 encoding and fixed URL

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,7 @@ pipelines:
           - bundler
         script:
           - curl -sL https://deb.nodesource.com/setup_8.x | bash -
-          - apt-get install -y nodejs
+          - apt-get install -y nodejs python-pygments
           - npm install --prefix .npm firebase-tools
           - bundle install --path=.bundler
           - bundle exec nanoc compile
@@ -23,7 +23,7 @@ pipelines:
             - bundler
           script:
             - curl -sL https://deb.nodesource.com/setup_8.x | bash -
-            - apt-get install -y nodejs
+            - apt-get install -y nodejs python-pygments
             - bundle install --path=.bundler
             - bundle exec nanoc compile
             - bundle exec nanoc check ilinks elinks css stale
