--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,3 +31,5 @@ deploy:
   stage: deploy
   script:
     - .npm/node_modules/firebase-tools/bin/firebase deploy -m "GitLab Pipeline#$CI_PIPELINE_ID Build#$CI_BUILD_ID" --token "$FIREBASE_TOKEN" --non-interactive
+  only:
+    - master
