[ci] Tweaked before_script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,17 +6,13 @@ cache:
   - .bundler
 
 before_script:
-  - curl -sL https://deb.nodesource.com/setup_8.x | bash -
-  - apt-get update -qq && apt-get install -y nodejs python-pygments
-  - npm install --prefix .npm firebase-tools
   - gem install bundler --no-ri --no-rdoc
-  - ruby -v
-  - which ruby
   - bundle install --path=.bundler --jobs $(nproc)  "${FLAGS[@]}"
 
 compile:
   stage: build
   script:
+    - apt-get update -qq && apt-get install -y python-pygments
     - bundle exec nanoc compile
   artifacts:
     paths:
@@ -30,6 +26,9 @@ check:
 deploy:
   stage: deploy
   script:
+    - curl -sL https://deb.nodesource.com/setup_8.x | bash -
+    - apt-get update -qq && apt-get install -y nodejs
+    - npm install --prefix .npm firebase-tools
     - .npm/node_modules/firebase-tools/bin/firebase deploy -m "GitLab Pipeline#$CI_PIPELINE_ID Build#$CI_BUILD_ID" --token "$FIREBASE_TOKEN" --non-interactive
   only:
     - master
