--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -28,4 +28,4 @@ site:
   name: "Olivier Patry"
   description: "Personal website of Olivier Patry."
   url: "https://opatry.net/"
-  repo: "https://bitbucket.org/opatry/opatry.net"
+  repo: "https://gitlab.com/opatry/website.git"
