--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,14 @@ cache:
 
 before_script:
   - curl -sL https://deb.nodesource.com/setup_8.x | bash -
-  - apt-get update -qq && apt-get install -y nodejs python-pygments
+  - apt-get update -qq && apt-get install -y nodejs python-pygments locales
+  - echo "en_US UTF-8" > /etc/locale.gen
+  - locale-gen en_US.UTF-8
+  - export LANG=en_US.UTF-8
+  - export LANGUAGE=en_US:en
+  - export LC_ALL=en_US.UTF-8
   - gem install bundler --no-ri --no-rdoc
-  - bundle install --path=.bundler --jobs $(nproc)  "${FLAGS[@]}"
+  - bundle install --path=.bundler --jobs $(nproc)
 
 compile:
   stage: build
