[nanoc] Fixed CI definition (now private on GitLab) (2)

--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -28,4 +28,4 @@ site:
   name: "Olivier Patry"
   description: "Personal website of Olivier Patry."
   url: "https://opatry.net/"
-  repo: "https://gitlab.com/opatry/website.git"
+  repo: "https://gitlab.com/opatry/opatry.net.git"
