[ssg] Added more tests on output (html, mixed_content)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ compile:
 check:
   stage: test
   script:
-    - bundle exec nanoc check ilinks elinks css stale
+    - bundle exec nanoc check ilinks elinks html css stale mixed_content
 
 deploy:
   stage: deploy
