Add link to Mastodon profile (with rel="me")
Using `rel="me"` should help Mastodon profile add a green checkmark ✅  near the link.

--- a/Rules
+++ b/Rules
@@ -11,6 +11,13 @@ preprocess do
   end
 end
 
+compile '/assets/icons/**/*.svg' do
+  # TODO: optimize SVG (with svgo or something like that)
+
+  # no need to write/route such SVG, inlined within HTML
+  write nil
+end
+
 compile '/static/**/*' do
   # don't filter or layout
 end
