--- a/Rules
+++ b/Rules
@@ -15,6 +15,9 @@ compile '/static/**/*' do
   # don't filter or layout
 end
 
+# simply copy other assets
+passthrough '/images/**/*'
+
 compile '/notes/**/*' do
   filter :fenced_code_block
   filter :erb
