--- a/.github/workflows/build_test_deploy.yml
+++ b/.github/workflows/build_test_deploy.yml
@@ -10,38 +10,18 @@ jobs:
     name: Build, Test and Deploy
     runs-on: ubuntu-latest
 
+    env:
+      BUNDLE_WITHOUT: development
+
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    - name: Setup Ruby 3.0
+    - name: Setup Ruby 3.1
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.0
-
-    - name: Cache bundler gems
-      id: cache-bundler
-      uses: actions/cache@v3
-      with:
-        path: .bundler
-        key: ${{ runner.os }}-gems-v2-${{ hashFiles('**/Gemfile.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-gems-v2-
-
-    - name: Install Bundler & Gems
-      if: steps.cache-bundler.outputs.cache-hit != 'true'
-      run: |
-        gem install bundler
-        bundle config set --local without 'development'
-        bundle config set --local path .bundler
-        bundle install --jobs "$(nproc)"
-
-    - name: Install Bundler only
-      if: steps.cache-bundler.outputs.cache-hit == 'true'
-      run: |
-          gem install bundler
-          bundle config set --local without 'development'
-          bundle config set --local path .bundler
+        ruby-version: 3.1
+        bundler-cache: true
 
     - name: Cache nanoc
       id: cache-nanoc
@@ -77,9 +57,9 @@ jobs:
 
     - name: Setup Node
       if: steps.build.outputs.need_deploy == 0
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: '17'
+        node-version: '22'
         cache: 'npm'
 
     - name: Deploy prod
